<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Binar Wave 5 - KBG</string>
    <string name="suit_prefs">SUIT_PREFS</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="landing1_text">Bermain dengan player lain.</string>
    <string name="landing2_text">Berlatih dengan CPU.</string>
    <string name="home_text">PILIH LAWANMU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="db_name">database_kbg.db</string>
    <string name="status_login_success">LOGIN SUCCESS</string>
    <string name="status_login_failed">LOGIN FAILED</string>
    <string name="status_register_success">REGISTER SUCCESS</string>
    <string name="status_register_failed">REGISTER FAILED</string>
    <string name="status_data_not_null">Data tidak boleh kosong</string>
    <string name="title_stone">Batu</string>
    <string name="title_scissor">Gunting</string>
    <string name="title_paper">Kertas</string>
    <string name="title_name">Nama</string>
    <string name="status_result_draw">Draw!</string>
    <string name="title_welcome_back">Selamat datang kembali</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">@string/title_name</string>
    <string name="title_btn_login">Login</string>
    <string name="title_register_view">Registrasi akunmu</string>
    <string name="title_btn_register">Register</string>
    <string name="title_question_account">Sudah punya akun?</string>
    <string name="btn_title_cancel">cancel</string>
    <string name="btn_title_save">save</string>
    <string name="title_result_player">Hasil Permainan</string>
    <string name="result_player">Hasil\nPemenang</string>
    <string name="btn_title_play_again">main lagi</string>
    <string name="btn_title_back_home">kembali ke menu</string>
    <string name="title_lending3">Kumpulkan poin dan \n jadilah juara!</string>
    <string name="title_profile">Profile</string>
    <string name="title_question_register">Belum punya akun?</string>

    <string-array name="choice">
        <item>@string/title_stone</item>
        <item>@string/title_scissor</item>
        <item>@string/title_paper</item>
    </string-array>
    <string name="close">close</string>
    <string name="logo">logo</string>
    <string name="player_1">Player 1</string>
    <string name="hati1">hati1</string>
    <string name="hati2">hati2</string>
    <string name="hati3">hati3</string>
    <string name="batu">batu</string>
    <string name="kertas">kertas</string>
    <string name="gunting">gunting</string>
    <string name="vs">VS</string>
    <string name="player_2">Player 2</string>
    <string name="hati4">hati4</string>
    <string name="hati5">hati5</string>
    <string name="hati6">hati6</string>
    <string name="refresh">refresh</string>
    <string name="backsetting">backsetting</string>
</resources>
