<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_multi_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/button_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|top"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/close"
        app:srcCompat="@drawable/btn_close"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="303dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/img_gametitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/border_gamesuit_background"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/player1_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/player_1"
                    android:textSize="26sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    tools:ignore="NestedWeights">

                    <ImageView
                        android:id="@+id/iv_hati1player1"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/hati1"
                        app:layout_constraintTop_toBottomOf="@+id/player1_name"
                        app:srcCompat="@drawable/simbol_nyawa" />

                    <ImageView
                        android:id="@+id/iv_hati2player1"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/hati2"
                        app:layout_constraintStart_toEndOf="@+id/iv_hati3"
                        app:layout_constraintTop_toBottomOf="@+id/player1_name"
                        app:srcCompat="@drawable/simbol_nyawa" />

                    <ImageView
                        android:id="@+id/iv_hati3player1"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/hati3"
                        app:layout_constraintStart_toEndOf="@+id/iv_hati1"
                        app:layout_constraintTop_toBottomOf="@+id/player1_name"
                        app:srcCompat="@drawable/simbol_nyawa" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_batu_player1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/batu"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_stone"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/img_kertas_player1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/kertas"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_paper"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/img_gunting_player1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/gunting"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_scissor"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>

            <TextView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="casual"
                android:rotation="-30"
                android:text="@string/vs"
                android:textColor="#D10000"
                android:textSize="60sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/player2_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/player_2"
                    android:textSize="26sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    tools:ignore="NestedWeights">

                    <ImageView
                        android:id="@+id/iv_hati1player2"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/hati1"
                        app:layout_constraintTop_toBottomOf="@+id/player1_name"
                        app:srcCompat="@drawable/simbol_nyawa" />

                    <ImageView
                        android:id="@+id/iv_hati2player2"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/hati2"
                        app:layout_constraintStart_toEndOf="@+id/iv_hati3"
                        app:layout_constraintTop_toBottomOf="@+id/player1_name"
                        app:srcCompat="@drawable/simbol_nyawa" />

                    <ImageView
                        android:id="@+id/iv_hati3player2"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/hati3"
                        app:layout_constraintStart_toEndOf="@+id/iv_hati1"
                        app:layout_constraintTop_toBottomOf="@+id/player1_name"
                        app:srcCompat="@drawable/simbol_nyawa" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_batu_player2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/batu"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_stone"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/img_kertas_player2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/kertas"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_paper"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/img_gunting_player2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/gunting"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_scissor"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/button_refresh"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/refresh"
                    app:srcCompat="@drawable/ic_refresh"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>